finish basic traj