@@ -15,6 +15,10 @@ import edu.wpi.first.math.kinematics.ChassisSpeeds;
 import edu.wpi.first.math.spline.Spline.ControlVector;
 import edu.wpi.first.math.trajectory.Trajectory;
 import edu.wpi.first.math.trajectory.TrajectoryGenerator;
+import edu.wpi.first.wpilibj2.command.Command;
+import edu.wpi.first.wpilibj2.command.CommandBase;
+import edu.wpi.first.wpilibj2.command.InstantCommand;
+import edu.wpi.first.wpilibj2.command.SequentialCommandGroup;
 import edu.wpi.first.wpilibj2.command.SubsystemBase;
 import static frc.robot.Constants.Drive.*;
 import static frc.robot.Constants.FiducialTracking.*;
@@ -23,9 +27,11 @@ public class TrajectorySubystem extends SubsystemBase {
   List<PathPoint> m_BlueGridOnePoints;
   List<PathPoint> m_BlueGridTwoPoints;
   List<PathPoint> m_BlueGridThreePoints;
+  List<PathPoint> m_BlueLoadingPoints;
   List<PathPoint> m_RedGridOnePoints;
   List<PathPoint> m_RedGridTwoPoints;
   List<PathPoint> m_RedGridThreePoints;
+  List<PathPoint> m_RedLoadingPoints;
 
   DriveSubsystem driveSubsystem;
   PoseEstimatorSubsystem poseEstimator;
@@ -35,14 +41,38 @@ public class TrajectorySubystem extends SubsystemBase {
     this.driveSubsystem = driveSubsystem;
     this.poseEstimator = poseEstimator;
     new PathPoint(null, null);
+   
     this.m_BlueGridOnePoints = Collections.unmodifiableList
-    (List.of(PathPoint.fromCurrentDifferentialState(poseEstimator.getPose2d(),driveSubsystem.getChassisSpeeds() )));
-    this.m_BlueGridTwoPoints = Collections.unmodifiableList(List.of());
-    this.m_BlueGridThreePoints = Collections.unmodifiableList(List.of());
-    this.m_RedGridOnePoints = Collections.unmodifiableList(List.of());
-    this.m_RedGridTwoPoints = Collections.unmodifiableList(List.of());
-    this.m_RedGridThreePoints = Collections.unmodifiableList(List.of());
-
+    (List.of(new PathPoint( poseEstimator.getPose2d().getTranslation(), poseEstimator.getPose2d().getRotation()),
+      new PathPoint(TAG_EIGHT_POSE.toPose2d().getTranslation(), TAG_EIGHT_POSE.toPose2d().getRotation())));
+   
+    this.m_BlueGridTwoPoints = Collections.unmodifiableList(List.of(
+      new PathPoint( poseEstimator.getPose2d().getTranslation(), poseEstimator.getPose2d().getRotation()),
+      new PathPoint(TAG_SEVEN_POSE.toPose2d().getTranslation(), TAG_SEVEN_POSE.toPose2d().getRotation()) ));
+   
+    this.m_BlueGridThreePoints = Collections.unmodifiableList(List.of(
+      new PathPoint( poseEstimator.getPose2d().getTranslation(), poseEstimator.getPose2d().getRotation())
+      ,new PathPoint(TAG_SIX_POSE.toPose2d().getTranslation(), TAG_SIX_POSE.toPose2d().getRotation())));
+   
+    this.m_BlueLoadingPoints = Collections.unmodifiableList(List.of(
+      new PathPoint( poseEstimator.getPose2d().getTranslation(), poseEstimator.getPose2d().getRotation())
+      ,new PathPoint(TAG_FOUR_POSE.toPose2d().getTranslation(), TAG_FOUR_POSE.toPose2d().getRotation())));
+   
+    this.m_RedGridOnePoints = Collections.unmodifiableList(List.of(
+      new PathPoint( poseEstimator.getPose2d().getTranslation(), poseEstimator.getPose2d().getRotation())
+      ,new PathPoint(TAG_THREE_POSE.toPose2d().getTranslation(), TAG_THREE_POSE.toPose2d().getRotation())));
+   
+    this.m_RedGridTwoPoints = Collections.unmodifiableList(List.of(
+      new PathPoint( poseEstimator.getPose2d().getTranslation(), poseEstimator.getPose2d().getRotation())
+      ,new PathPoint(TAG_TWO_POSE.toPose2d().getTranslation(), TAG_TWO_POSE.toPose2d().getRotation())));
+   
+    this.m_RedGridThreePoints = Collections.unmodifiableList(List.of(
+      new PathPoint( poseEstimator.getPose2d().getTranslation(), poseEstimator.getPose2d().getRotation())
+      ,new PathPoint(TAG_ONE_POSE.toPose2d().getTranslation(), TAG_ONE_POSE.toPose2d().getRotation())));
+    
+      this.m_RedLoadingPoints = Collections.unmodifiableList(List.of(
+        new PathPoint( poseEstimator.getPose2d().getTranslation(), poseEstimator.getPose2d().getRotation())
+        ,new PathPoint(TAG_FIVE_POSE.toPose2d().getTranslation(), TAG_FIVE_POSE.toPose2d().getRotation())));  
 
 
   }
@@ -52,43 +82,35 @@ public class TrajectorySubystem extends SubsystemBase {
     // This method will be called once per scheduler run
   }
   public Trajectory GetBlueGridOneTrajectory(){
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-      poseEstimator.getPose2d(), null,TAG_EIGHT_POSE.toPose2d() , TRAJECTORY_CONFIG);
+    PathPlannerTrajectory trajectory = PathPlanner.generatePath(CONSTRAINTS, m_BlueGridOnePoints);
     return trajectory;
   }
   public Trajectory GetBlueGridTwoTrajectory(){
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-      poseEstimator.getPose2d(), null,TAG_SEVEN_POSE.toPose2d() , TRAJECTORY_CONFIG);
+    PathPlannerTrajectory trajectory = PathPlanner.generatePath(CONSTRAINTS, m_BlueGridTwoPoints);
     return trajectory;
   }
   public Trajectory GetBlueGridThreeTrajectory(){
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-      poseEstimator.getPose2d(), null,TAG_THREE_POSE.toPose2d() , TRAJECTORY_CONFIG);
+    PathPlannerTrajectory trajectory = PathPlanner.generatePath(CONSTRAINTS, m_BlueGridThreePoints);
     return trajectory;
   }
   public Trajectory GetBlueLoadingTrajectory(){
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-      poseEstimator.getPose2d(), null,TAG_FOUR_POSE.toPose2d() , TRAJECTORY_CONFIG);
+    PathPlannerTrajectory trajectory = PathPlanner.generatePath(CONSTRAINTS, m_BlueLoadingPoints);
     return trajectory;
   }
   public Trajectory GetRedGridOneTrajectory(){
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-      poseEstimator.getPose2d(), null,TAG_ONE_POSE.toPose2d() , TRAJECTORY_CONFIG);
+    PathPlannerTrajectory trajectory = PathPlanner.generatePath(CONSTRAINTS, m_RedGridOnePoints);
     return trajectory;
   }
   public Trajectory GetRedGridTwoTrajectory(){
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-      poseEstimator.getPose2d(), null,TAG_TWO_POSE.toPose2d() , TRAJECTORY_CONFIG);
+    PathPlannerTrajectory trajectory = PathPlanner.generatePath(CONSTRAINTS, m_RedGridTwoPoints);
     return trajectory;
   }
-  public Trajectory GetRedGridThreeTrajectory(){
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-      poseEstimator.getPose2d(), null,TAG_THREE_POSE.toPose2d() , TRAJECTORY_CONFIG);
+  public PathPlannerTrajectory GetRedGridThreeTrajectory(){
+    PathPlannerTrajectory trajectory = PathPlanner.generatePath(CONSTRAINTS, m_RedGridThreePoints);
     return trajectory;
   }
-  public Trajectory GetRedLoadingTrajectory(){
-    Trajectory trajectory = TrajectoryGenerator.generateTrajectory(
-      poseEstimator.getPose2d(), null,TAG_FIVE_POSE.toPose2d() , TRAJECTORY_CONFIG);
+  public PathPlannerTrajectory GetRedLoadingTrajectory(){
+    PathPlannerTrajectory trajectory = PathPlanner.generatePath(CONSTRAINTS, m_RedLoadingPoints);
     return trajectory;
   }
 
@@ -125,6 +147,7 @@ public class TrajectorySubystem extends SubsystemBase {
       else{
         return GetRedLoadingTrajectory();
       }
-        
-      }
+   
+   
  }
+}
